compiler/src/y.output
Terminals which are not used

   tVOID
   tRETURN


State 43 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 75 conflicts: 2 shift/reduce
State 76 conflicts: 2 shift/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 2 shift/reduce
State 80 conflicts: 7 shift/reduce
State 81 conflicts: 7 shift/reduce
State 86 conflicts: 2 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY

    2 RETURN_TYPE: TYPE
    3            | /* empty */

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS LISTE_INSTRUCTIONS tCLOSED_C_BRACKET

    5 LISTE_DECLARATIONS: DECLARATION LISTE_DECLARATIONS
    6                   | /* empty */

    7 LISTE_INSTRUCTIONS: INSTRUCTION LISTE_INSTRUCTIONS
    8                   | /* empty */

    9 INSTRUCTION: AFFECTATION
   10            | COP
   11            | WHILE
   12            | CONDITION
   13            | AFFICHAGE

   14 TYPE: tINT

   15 TYPE_OPTION: tCONST

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS

   17 @1: /* empty */

   18 CONDITION: CONDITION_IF BODY @1 tELSE BODY
   19          | CONDITION_IF BODY

   20 @2: /* empty */

   21 @3: /* empty */

   22 WHILE: tWHILE tOPENED_PARENTHESIS @2 EXPRESSION tCLOSED_PARENTHESIS @3 BODY

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN
   24            | TYPE LIST_IDENTIFIER tSEMI_COLUMN
   25            | TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

   26 LIST_IDENTIFIER: tIDENTIFIER

   27 @4: /* empty */

   28 LIST_IDENTIFIER: tIDENTIFIER @4 tCOMMA LIST_IDENTIFIER

   29 AFFECTATION: tIDENTIFIER tEQUAL tNUMBER tSEMI_COLUMN

   30 COP: tIDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN

   32 EXPRESSION: tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS
   33           | EXPRESSION tSTAR EXPRESSION
   34           | EXPRESSION tSLASH EXPRESSION
   35           | EXPRESSION tPLUS EXPRESSION
   36           | EXPRESSION tMINUS EXPRESSION
   37           | EXPRESSION tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION tSUP EXPRESSION
   39           | EXPRESSION tINF EXPRESSION
   40           | tIDENTIFIER
   41           | tMINUS EXPRESSION
   42           | tNUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
tNUMBER (258) 29 42
tIDENTIFIER (259) 26 28 29 30 31 40
tCOMMA (260) 28
tSEMI_COLUMN (261) 23 24 25 29 30 31
tSLASH (262) 34
tSTAR (263) 33
tPLUS (264) 35
tMINUS (265) 36 41
tEQUAL (266) 23 25 29 30 37
tCLOSED_PARENTHESIS (267) 1 16 22 31 32
tOPENED_PARENTHESIS (268) 1 16 22 31 32
tVOID (269)
tCONST (270) 15
tINT (271) 14
tMAIN (272) 1
tOPENED_C_BRACKET (273) 4
tCLOSED_C_BRACKET (274) 4
tRETURN (275)
tPRINTF (276) 31
tSUP (277) 38
tINF (278) 39
tIF (279) 16
tELSE (280) 18
tWHILE (281) 22


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
PROGRAM (28)
    on left: 1, on right: 0
RETURN_TYPE (29)
    on left: 2 3, on right: 1
BODY (30)
    on left: 4, on right: 1 18 19 22
LISTE_DECLARATIONS (31)
    on left: 5 6, on right: 4 5
LISTE_INSTRUCTIONS (32)
    on left: 7 8, on right: 4 7
INSTRUCTION (33)
    on left: 9 10 11 12 13, on right: 7
TYPE (34)
    on left: 14, on right: 2 23 24 25
TYPE_OPTION (35)
    on left: 15, on right: 23
CONDITION_IF (36)
    on left: 16, on right: 18 19
CONDITION (37)
    on left: 18 19, on right: 12
@1 (38)
    on left: 17, on right: 18
WHILE (39)
    on left: 22, on right: 11
@2 (40)
    on left: 20, on right: 22
@3 (41)
    on left: 21, on right: 22
DECLARATION (42)
    on left: 23 24 25, on right: 5
LIST_IDENTIFIER (43)
    on left: 26 28, on right: 23 24 25 28
@4 (44)
    on left: 27, on right: 28
AFFECTATION (45)
    on left: 29, on right: 9
COP (46)
    on left: 30, on right: 10
AFFICHAGE (47)
    on left: 31, on right: 13
EXPRESSION (48)
    on left: 32 33 34 35 36 37 38 39 40 41 42, on right: 16 22 23 25
    30 32 33 34 35 36 37 38 39 41


state 0

    0 $accept: . PROGRAM $end

    tINT  shift, and go to state 1

    $default  reduce using rule 3 (RETURN_TYPE)

    PROGRAM      go to state 2
    RETURN_TYPE  go to state 3
    TYPE         go to state 4


state 1

   14 TYPE: tINT .

    $default  reduce using rule 14 (TYPE)


state 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 5


state 3

    1 PROGRAM: RETURN_TYPE . tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY

    tMAIN  shift, and go to state 6


state 4

    2 RETURN_TYPE: TYPE .

    $default  reduce using rule 2 (RETURN_TYPE)


state 5

    0 $accept: PROGRAM $end .

    $default  accept


state 6

    1 PROGRAM: RETURN_TYPE tMAIN . tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY

    tOPENED_PARENTHESIS  shift, and go to state 7


state 7

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS . tCLOSED_PARENTHESIS BODY

    tCLOSED_PARENTHESIS  shift, and go to state 8


state 8

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS . BODY

    tOPENED_C_BRACKET  shift, and go to state 9

    BODY  go to state 10


state 9

    4 BODY: tOPENED_C_BRACKET . LISTE_DECLARATIONS LISTE_INSTRUCTIONS tCLOSED_C_BRACKET

    tCONST  shift, and go to state 11
    tINT    shift, and go to state 1

    $default  reduce using rule 6 (LISTE_DECLARATIONS)

    LISTE_DECLARATIONS  go to state 12
    TYPE                go to state 13
    TYPE_OPTION         go to state 14
    DECLARATION         go to state 15


state 10

    1 PROGRAM: RETURN_TYPE tMAIN tOPENED_PARENTHESIS tCLOSED_PARENTHESIS BODY .

    $default  reduce using rule 1 (PROGRAM)


state 11

   15 TYPE_OPTION: tCONST .

    $default  reduce using rule 15 (TYPE_OPTION)


state 12

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS . LISTE_INSTRUCTIONS tCLOSED_C_BRACKET

    tIDENTIFIER  shift, and go to state 16
    tPRINTF      shift, and go to state 17
    tIF          shift, and go to state 18
    tWHILE       shift, and go to state 19

    $default  reduce using rule 8 (LISTE_INSTRUCTIONS)

    LISTE_INSTRUCTIONS  go to state 20
    INSTRUCTION         go to state 21
    CONDITION_IF        go to state 22
    CONDITION           go to state 23
    WHILE               go to state 24
    AFFECTATION         go to state 25
    COP                 go to state 26
    AFFICHAGE           go to state 27


state 13

   24 DECLARATION: TYPE . LIST_IDENTIFIER tSEMI_COLUMN
   25            | TYPE . LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

    tIDENTIFIER  shift, and go to state 28

    LIST_IDENTIFIER  go to state 29


state 14

   23 DECLARATION: TYPE_OPTION . TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

    tINT  shift, and go to state 1

    TYPE  go to state 30


state 15

    5 LISTE_DECLARATIONS: DECLARATION . LISTE_DECLARATIONS

    tCONST  shift, and go to state 11
    tINT    shift, and go to state 1

    $default  reduce using rule 6 (LISTE_DECLARATIONS)

    LISTE_DECLARATIONS  go to state 31
    TYPE                go to state 13
    TYPE_OPTION         go to state 14
    DECLARATION         go to state 15


state 16

   29 AFFECTATION: tIDENTIFIER . tEQUAL tNUMBER tSEMI_COLUMN
   30 COP: tIDENTIFIER . tEQUAL EXPRESSION tSEMI_COLUMN

    tEQUAL  shift, and go to state 32


state 17

   31 AFFICHAGE: tPRINTF . tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN

    tOPENED_PARENTHESIS  shift, and go to state 33


state 18

   16 CONDITION_IF: tIF . tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS

    tOPENED_PARENTHESIS  shift, and go to state 34


state 19

   22 WHILE: tWHILE . tOPENED_PARENTHESIS @2 EXPRESSION tCLOSED_PARENTHESIS @3 BODY

    tOPENED_PARENTHESIS  shift, and go to state 35


state 20

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS LISTE_INSTRUCTIONS . tCLOSED_C_BRACKET

    tCLOSED_C_BRACKET  shift, and go to state 36


state 21

    7 LISTE_INSTRUCTIONS: INSTRUCTION . LISTE_INSTRUCTIONS

    tIDENTIFIER  shift, and go to state 16
    tPRINTF      shift, and go to state 17
    tIF          shift, and go to state 18
    tWHILE       shift, and go to state 19

    $default  reduce using rule 8 (LISTE_INSTRUCTIONS)

    LISTE_INSTRUCTIONS  go to state 37
    INSTRUCTION         go to state 21
    CONDITION_IF        go to state 22
    CONDITION           go to state 23
    WHILE               go to state 24
    AFFECTATION         go to state 25
    COP                 go to state 26
    AFFICHAGE           go to state 27


state 22

   18 CONDITION: CONDITION_IF . BODY @1 tELSE BODY
   19          | CONDITION_IF . BODY

    tOPENED_C_BRACKET  shift, and go to state 9

    BODY  go to state 38


state 23

   12 INSTRUCTION: CONDITION .

    $default  reduce using rule 12 (INSTRUCTION)


state 24

   11 INSTRUCTION: WHILE .

    $default  reduce using rule 11 (INSTRUCTION)


state 25

    9 INSTRUCTION: AFFECTATION .

    $default  reduce using rule 9 (INSTRUCTION)


state 26

   10 INSTRUCTION: COP .

    $default  reduce using rule 10 (INSTRUCTION)


state 27

   13 INSTRUCTION: AFFICHAGE .

    $default  reduce using rule 13 (INSTRUCTION)


state 28

   26 LIST_IDENTIFIER: tIDENTIFIER .
   28                | tIDENTIFIER . @4 tCOMMA LIST_IDENTIFIER

    tCOMMA    reduce using rule 27 (@4)
    $default  reduce using rule 26 (LIST_IDENTIFIER)

    @4  go to state 39


state 29

   24 DECLARATION: TYPE LIST_IDENTIFIER . tSEMI_COLUMN
   25            | TYPE LIST_IDENTIFIER . tEQUAL EXPRESSION tSEMI_COLUMN

    tSEMI_COLUMN  shift, and go to state 40
    tEQUAL        shift, and go to state 41


state 30

   23 DECLARATION: TYPE_OPTION TYPE . LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN

    tIDENTIFIER  shift, and go to state 28

    LIST_IDENTIFIER  go to state 42


state 31

    5 LISTE_DECLARATIONS: DECLARATION LISTE_DECLARATIONS .

    $default  reduce using rule 5 (LISTE_DECLARATIONS)


state 32

   29 AFFECTATION: tIDENTIFIER tEQUAL . tNUMBER tSEMI_COLUMN
   30 COP: tIDENTIFIER tEQUAL . EXPRESSION tSEMI_COLUMN

    tNUMBER              shift, and go to state 43
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 47


state 33

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS . tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN

    tIDENTIFIER  shift, and go to state 48


state 34

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS . EXPRESSION tCLOSED_PARENTHESIS

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 50


state 35

   22 WHILE: tWHILE tOPENED_PARENTHESIS . @2 EXPRESSION tCLOSED_PARENTHESIS @3 BODY

    $default  reduce using rule 20 (@2)

    @2  go to state 51


state 36

    4 BODY: tOPENED_C_BRACKET LISTE_DECLARATIONS LISTE_INSTRUCTIONS tCLOSED_C_BRACKET .

    $default  reduce using rule 4 (BODY)


state 37

    7 LISTE_INSTRUCTIONS: INSTRUCTION LISTE_INSTRUCTIONS .

    $default  reduce using rule 7 (LISTE_INSTRUCTIONS)


state 38

   18 CONDITION: CONDITION_IF BODY . @1 tELSE BODY
   19          | CONDITION_IF BODY .

    tELSE     reduce using rule 17 (@1)
    $default  reduce using rule 19 (CONDITION)

    @1  go to state 52


state 39

   28 LIST_IDENTIFIER: tIDENTIFIER @4 . tCOMMA LIST_IDENTIFIER

    tCOMMA  shift, and go to state 53


state 40

   24 DECLARATION: TYPE LIST_IDENTIFIER tSEMI_COLUMN .

    $default  reduce using rule 24 (DECLARATION)


state 41

   25 DECLARATION: TYPE LIST_IDENTIFIER tEQUAL . EXPRESSION tSEMI_COLUMN

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 54


state 42

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER . tEQUAL EXPRESSION tSEMI_COLUMN

    tEQUAL  shift, and go to state 55


state 43

   29 AFFECTATION: tIDENTIFIER tEQUAL tNUMBER . tSEMI_COLUMN
   42 EXPRESSION: tNUMBER .

    tSEMI_COLUMN  shift, and go to state 56

    tSEMI_COLUMN  [reduce using rule 42 (EXPRESSION)]
    $default      reduce using rule 42 (EXPRESSION)


state 44

   40 EXPRESSION: tIDENTIFIER .

    $default  reduce using rule 40 (EXPRESSION)


state 45

   41 EXPRESSION: tMINUS . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 57


state 46

   32 EXPRESSION: tOPENED_PARENTHESIS . EXPRESSION tCLOSED_PARENTHESIS

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 58


state 47

   30 COP: tIDENTIFIER tEQUAL EXPRESSION . tSEMI_COLUMN
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSEMI_COLUMN  shift, and go to state 59
    tSLASH        shift, and go to state 60
    tSTAR         shift, and go to state 61
    tPLUS         shift, and go to state 62
    tMINUS        shift, and go to state 63
    tEQUAL        shift, and go to state 64
    tSUP          shift, and go to state 65
    tINF          shift, and go to state 66


state 48

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER . tCLOSED_PARENTHESIS tSEMI_COLUMN

    tCLOSED_PARENTHESIS  shift, and go to state 67


state 49

   42 EXPRESSION: tNUMBER .

    $default  reduce using rule 42 (EXPRESSION)


state 50

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS EXPRESSION . tCLOSED_PARENTHESIS
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH               shift, and go to state 60
    tSTAR                shift, and go to state 61
    tPLUS                shift, and go to state 62
    tMINUS               shift, and go to state 63
    tEQUAL               shift, and go to state 64
    tCLOSED_PARENTHESIS  shift, and go to state 68
    tSUP                 shift, and go to state 65
    tINF                 shift, and go to state 66


state 51

   22 WHILE: tWHILE tOPENED_PARENTHESIS @2 . EXPRESSION tCLOSED_PARENTHESIS @3 BODY

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 69


state 52

   18 CONDITION: CONDITION_IF BODY @1 . tELSE BODY

    tELSE  shift, and go to state 70


state 53

   28 LIST_IDENTIFIER: tIDENTIFIER @4 tCOMMA . LIST_IDENTIFIER

    tIDENTIFIER  shift, and go to state 28

    LIST_IDENTIFIER  go to state 71


state 54

   25 DECLARATION: TYPE LIST_IDENTIFIER tEQUAL EXPRESSION . tSEMI_COLUMN
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSEMI_COLUMN  shift, and go to state 72
    tSLASH        shift, and go to state 60
    tSTAR         shift, and go to state 61
    tPLUS         shift, and go to state 62
    tMINUS        shift, and go to state 63
    tEQUAL        shift, and go to state 64
    tSUP          shift, and go to state 65
    tINF          shift, and go to state 66


state 55

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER tEQUAL . EXPRESSION tSEMI_COLUMN

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 73


state 56

   29 AFFECTATION: tIDENTIFIER tEQUAL tNUMBER tSEMI_COLUMN .

    $default  reduce using rule 29 (AFFECTATION)


state 57

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION
   41           | tMINUS EXPRESSION .

    tSUP  shift, and go to state 65
    tINF  shift, and go to state 66

    tSUP      [reduce using rule 41 (EXPRESSION)]
    tINF      [reduce using rule 41 (EXPRESSION)]
    $default  reduce using rule 41 (EXPRESSION)


state 58

   32 EXPRESSION: tOPENED_PARENTHESIS EXPRESSION . tCLOSED_PARENTHESIS
   33           | EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH               shift, and go to state 60
    tSTAR                shift, and go to state 61
    tPLUS                shift, and go to state 62
    tMINUS               shift, and go to state 63
    tEQUAL               shift, and go to state 64
    tCLOSED_PARENTHESIS  shift, and go to state 74
    tSUP                 shift, and go to state 65
    tINF                 shift, and go to state 66


state 59

   30 COP: tIDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN .

    $default  reduce using rule 30 (COP)


state 60

   34 EXPRESSION: EXPRESSION tSLASH . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 75


state 61

   33 EXPRESSION: EXPRESSION tSTAR . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 76


state 62

   35 EXPRESSION: EXPRESSION tPLUS . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 77


state 63

   36 EXPRESSION: EXPRESSION tMINUS . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 78


state 64

   37 EXPRESSION: EXPRESSION tEQUAL . tEQUAL EXPRESSION

    tEQUAL  shift, and go to state 79


state 65

   38 EXPRESSION: EXPRESSION tSUP . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 80


state 66

   39 EXPRESSION: EXPRESSION tINF . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 81


state 67

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS . tSEMI_COLUMN

    tSEMI_COLUMN  shift, and go to state 82


state 68

   16 CONDITION_IF: tIF tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS .

    $default  reduce using rule 16 (CONDITION_IF)


state 69

   22 WHILE: tWHILE tOPENED_PARENTHESIS @2 EXPRESSION . tCLOSED_PARENTHESIS @3 BODY
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH               shift, and go to state 60
    tSTAR                shift, and go to state 61
    tPLUS                shift, and go to state 62
    tMINUS               shift, and go to state 63
    tEQUAL               shift, and go to state 64
    tCLOSED_PARENTHESIS  shift, and go to state 83
    tSUP                 shift, and go to state 65
    tINF                 shift, and go to state 66


state 70

   18 CONDITION: CONDITION_IF BODY @1 tELSE . BODY

    tOPENED_C_BRACKET  shift, and go to state 9

    BODY  go to state 84


state 71

   28 LIST_IDENTIFIER: tIDENTIFIER @4 tCOMMA LIST_IDENTIFIER .

    $default  reduce using rule 28 (LIST_IDENTIFIER)


state 72

   25 DECLARATION: TYPE LIST_IDENTIFIER tEQUAL EXPRESSION tSEMI_COLUMN .

    $default  reduce using rule 25 (DECLARATION)


state 73

   23 DECLARATION: TYPE_OPTION TYPE LIST_IDENTIFIER tEQUAL EXPRESSION . tSEMI_COLUMN
   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSEMI_COLUMN  shift, and go to state 85
    tSLASH        shift, and go to state 60
    tSTAR         shift, and go to state 61
    tPLUS         shift, and go to state 62
    tMINUS        shift, and go to state 63
    tEQUAL        shift, and go to state 64
    tSUP          shift, and go to state 65
    tINF          shift, and go to state 66


state 74

   32 EXPRESSION: tOPENED_PARENTHESIS EXPRESSION tCLOSED_PARENTHESIS .

    $default  reduce using rule 32 (EXPRESSION)


state 75

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   34           | EXPRESSION tSLASH EXPRESSION .
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSUP  shift, and go to state 65
    tINF  shift, and go to state 66

    tSUP      [reduce using rule 34 (EXPRESSION)]
    tINF      [reduce using rule 34 (EXPRESSION)]
    $default  reduce using rule 34 (EXPRESSION)


state 76

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   33           | EXPRESSION tSTAR EXPRESSION .
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSUP  shift, and go to state 65
    tINF  shift, and go to state 66

    tSUP      [reduce using rule 33 (EXPRESSION)]
    tINF      [reduce using rule 33 (EXPRESSION)]
    $default  reduce using rule 33 (EXPRESSION)


state 77

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   35           | EXPRESSION tPLUS EXPRESSION .
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH  shift, and go to state 60
    tSTAR   shift, and go to state 61
    tSUP    shift, and go to state 65
    tINF    shift, and go to state 66

    tSUP      [reduce using rule 35 (EXPRESSION)]
    tINF      [reduce using rule 35 (EXPRESSION)]
    $default  reduce using rule 35 (EXPRESSION)


state 78

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   36           | EXPRESSION tMINUS EXPRESSION .
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH  shift, and go to state 60
    tSTAR   shift, and go to state 61
    tSUP    shift, and go to state 65
    tINF    shift, and go to state 66

    tSUP      [reduce using rule 36 (EXPRESSION)]
    tINF      [reduce using rule 36 (EXPRESSION)]
    $default  reduce using rule 36 (EXPRESSION)


state 79

   37 EXPRESSION: EXPRESSION tEQUAL tEQUAL . EXPRESSION

    tNUMBER              shift, and go to state 49
    tIDENTIFIER          shift, and go to state 44
    tMINUS               shift, and go to state 45
    tOPENED_PARENTHESIS  shift, and go to state 46

    EXPRESSION  go to state 86


state 80

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   38           | EXPRESSION tSUP EXPRESSION .
   39           | EXPRESSION . tINF EXPRESSION

    tSLASH  shift, and go to state 60
    tSTAR   shift, and go to state 61
    tPLUS   shift, and go to state 62
    tMINUS  shift, and go to state 63
    tEQUAL  shift, and go to state 64
    tSUP    shift, and go to state 65
    tINF    shift, and go to state 66

    tSLASH    [reduce using rule 38 (EXPRESSION)]
    tSTAR     [reduce using rule 38 (EXPRESSION)]
    tPLUS     [reduce using rule 38 (EXPRESSION)]
    tMINUS    [reduce using rule 38 (EXPRESSION)]
    tEQUAL    [reduce using rule 38 (EXPRESSION)]
    tSUP      [reduce using rule 38 (EXPRESSION)]
    tINF      [reduce using rule 38 (EXPRESSION)]
    $default  reduce using rule 38 (EXPRESSION)


state 81

   33 EXPRESSION: EXPRESSION . tSTAR EXPRESSION
   34           | EXPRESSION . tSLASH EXPRESSION
   35           | EXPRESSION . tPLUS EXPRESSION
   36           | EXPRESSION . tMINUS EXPRESSION
   37           | EXPRESSION . tEQUAL tEQUAL EXPRESSION
   38           | EXPRESSION . tSUP EXPRESSION
   39           | EXPRESSION . tINF EXPRESSION
   39           | EXPRESSION tINF EXPRESSION .

    tSLASH  shift, and go to state 60
    tSTAR   shift, and go to state 61
    tPLUS   shift, and go to state 62
    tMINUS  shift, and go to state 63
    tEQUAL  shift, and go to state 64
    tSUP    shift, and go to state 65
    tINF    shift, and go to state 66

    tSLASH    [reduce using rule 39 (EXPRESSION)]
    tSTAR     [reduce using rule 39 (EXPRESSION)]
    tPLUS     [reduce using rule 39 (EXPRESSION)]
    tMINUS    [reduce using rule 39 (EXPRESSION)]
    tEQUAL    [reduce using rule 39 (EXPRESSION)]
    tSUP      [reduce using rule 39 (EXPRESSION)]
    tINF      [reduce using rule 39 (EXPRESSION)]
    $default  reduce using rule 39 (EXPRESSION)


state 82

   31 AFFICHAGE: tPRINTF tOPENED_PARENTHESIS tIDENTIFIER tCLOSED_PARENTHESIS tSEMI_COLUMN .

    $default  reduce using rule 31 (AFFICHAGE)


state 83

   22 WHILE: tWHILE tOPENED_PARENTHESIS @2 EXPRESSION tCLOSED_PARENTHESIS . @3 BODY

    $default  reduce using rule 21 (@3)

    @3  go to state 87


state 84

   18 CONDITION: CONDITION_IF BODY @1 tELSE BODY .
